--- a/bio.html
+++ b/bio.html
@@ -34,6 +34,7 @@
                 <li> <a href="./productos.html"> Productos</a> </li>
                 <li> <a href="./bio.html"> Bio </a> </li>
                 <li> <a href="./obras.html"> Obras </a> </li>
+                <li> <a href="./iniciar_sesion.html"> Iniciar sesión </a> </li>
                 <li> <a href="./contacto.html"> <img src="./assets/logos/Contactanos.png" alt="Whatsapp"
                             class="cart-whatsapp"> </a>
                 </li>
